# raster-cpp

./: CMakeLists.txt
include/camera/: camera.h  frustum.h
include/colliders/: aabb.h  sphere.h
include/material/: color_convertion.h  texture.h
include/mesh/: triangle.h
include/transforms/: Constants.h  Matrix4x4.h  Transforms.h  Vec2.h  Vec3.h  Vec4.h
src/: main.cpp
src/camera/: camera.cpp  frustum.cpp
src/colliders/: aabb.cpp  sphere.cpp
src/material/: color_convertion.cpp  texture.cpp
src/mesh/: triangle.cpp
src/transforms/: Matrix4x4.cpp  Transforms.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
